--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -7,6 +7,12 @@ body {
     color: #fff;
 }
 
+#logo{
+    width: 100px;
+    height: 50px;
+    top: 2rem;
+}
+
 #log {
     font-size: 25px;
     text-align: center;
@@ -78,4 +84,28 @@ body {
 a {
     text-decoration: none !important;
     cursor: pointer;
+}
+
+#placa{
+display: flex;
+justify-content: row;
+position: relative;
+overflow: hidden;
+margin-top: 15rem;
+margin-left: -29rem;
+margin-right: 15rem;
+border-radius: 4px;
+flex-direction: row;
+background: #383838;
+padding: 20px; 
+width: 250px;
+height: 100px; 
+box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.274);
+}
+
+#placa p{
+    top: 1rem;
+    margin-top: -1rem;
+    position: center;
+    color: whitesmoke;
 }
